--- a/searchstyle.css
+++ b/searchstyle.css
@@ -40,3 +40,62 @@ body, html{
 .topnav a.active{
 	background-color: #00008B;
 }
+
+
+/* Dropdown Button, from w3schools */
+.dropbutton {
+	background-color: #3498DB;
+	color: white;
+	padding: 16px;
+	font-size: 16px;
+	border: none;
+	cursor: pointer;
+  }
+  
+  /* Dropdown button on hover & focus */
+  .dropbutton:hover, .dropbutton:focus {
+	background-color: #2980B9;
+  }
+  
+  /* The container <div> - needed to position the dropdown content */
+  .dropdown {
+	position: relative;
+	display: inline-block;
+  }
+  
+  /* Dropdown Content (Hidden by Default) */
+  .dropdowncontent {
+	display: none;
+	position: absolute;
+	background-color: #f1f1f1;
+	min-width: 160px;
+	box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+	z-index: 1;
+
+	overflow: auto;
+	height: 20vh;
+  }
+  
+  /* Links inside the dropdown */
+  .dropdowncontent a {
+	color: black;
+	padding: 12px 16px;
+	text-decoration: none;
+	display: block;
+  }
+  
+  /* Change color of dropdown links on hover */
+  .dropdowncontent a:hover {background-color: #ddd}
+  
+  /* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
+  .show {display:block;}
+
+  .selected{
+	  background-color: #A9A9A9;
+  }
+
+
+  #searchbar{
+	  margin-top: 5px;
+	  margin-bottom: 5px;
+  }
