--- a/searchstyle.css
+++ b/searchstyle.css
@@ -11,8 +11,8 @@ body, html{
 #heading{
     /*from uigradients.com*/
     background: #215f00;  /* fallback for old browsers */
-    background: -webkit-linear-gradient(to right, #e4e4d9, #215f00);  /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to right, #e4e4d9, #215f00); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    background: -webkit-linear-gradient(to left, #e4e4d9, #215f00);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to left, #e4e4d9, #215f00); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 
 #banner{
@@ -25,7 +25,7 @@ body, html{
 }
 
 .topnav{
-	background-color: #6495ED;
+	background-color: black;
 	overflow: hidden;
 }
 
@@ -35,10 +35,12 @@ body, html{
 	padding: 14px 16px;
 	font-size: 17px;
 	text-decoration: none;
+
+	color:white;
 }
 
 .topnav a.active{
-	background-color: #00008B;
+	background-color: #215f00;
 }
 
 
@@ -46,56 +48,120 @@ body, html{
 .dropbutton {
 	background-color: #3498DB;
 	color: white;
-	padding: 16px;
+	padding: 16px 16px 16px 16px;
 	font-size: 16px;
 	border: none;
 	cursor: pointer;
-  }
-  
-  /* Dropdown button on hover & focus */
-  .dropbutton:hover, .dropbutton:focus {
-	background-color: #2980B9;
-  }
-  
-  /* The container <div> - needed to position the dropdown content */
-  .dropdown {
-	position: relative;
-	display: inline-block;
-  }
-  
-  /* Dropdown Content (Hidden by Default) */
-  .dropdowncontent {
-	display: none;
-	position: absolute;
-	background-color: #f1f1f1;
-	min-width: 160px;
-	box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-	z-index: 1;
+}
 
-	overflow: auto;
+/* Dropdown button on hover & focus */
+.dropbutton:hover, .dropbutton:focus {
+background-color: #2980B9;
+}
+
+/* The container <div> - needed to position the dropdown content */
+.dropdown {
+position: relative;
+display: inline-block;
+}
+
+/* Dropdown Content (Hidden by Default) */
+.dropdowncontent {
+display: none;
+position: absolute;
+background-color: #f1f1f1;
+min-width: 160px;
+box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+z-index: 1;
+
+overflow: auto;
+height: 20vh;
+}
+
+/* Links inside the dropdown */
+.dropdowncontent a {
+color: black;
+padding: 12px 16px;
+text-decoration: none;
+display: block;
+}
+
+/* Change color of dropdown links on hover */
+.dropdowncontent a:hover {background-color: #ddd}
+
+/* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
+.show {display:block;}
+
+.selected{
+	background-color: #A9A9A9;
+}
+
+
+#searchbar{
+	margin-top: 5px;
+	margin-bottom: 5px;
+}
+
+.hide {display:none;}
+
+
+
+.refresh{
+	border: 2px solid black;
+	transition-duration: 0.3s;
+	cursor: pointer;
+	padding: 14px 14px 14px 14px;
+	font-size: 16px;
+}
+
+
+.refresh:hover{
+	background-color:black;
+	color:white;
+}
+
+/*entry css*/
+
+.entryimage{
 	height: 20vh;
-  }
-  
-  /* Links inside the dropdown */
-  .dropdowncontent a {
-	color: black;
-	padding: 12px 16px;
-	text-decoration: none;
-	display: block;
-  }
-  
-  /* Change color of dropdown links on hover */
-  .dropdowncontent a:hover {background-color: #ddd}
-  
-  /* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
-  .show {display:block;}
+	width: 20vw;	
+	margin-right: 5px;
+}
 
-  .selected{
-	  background-color: #A9A9A9;
-  }
+.entryimage > img {
+	object-fit: cover;
+	max-width: 100%;
+	max-height: 100%;
+	height: 100%;
+	width:100%;
+}
 
+.entry {
+	display: flex;
+	margin: 5px;
+	margin-left:0px;
+}
 
-  #searchbar{
-	  margin-top: 5px;
-	  margin-bottom: 5px;
-  }
+.entrytext > a{
+	text-decoration: solid;
+	color:black;
+	font-weight: bold;
+}
+
+#newspart{
+	margin-left: 5px;
+	margin-bottom: 5px;
+}
+
+.viewmore{
+	border: 2px solid black;
+	transition-duration: 0.3s;
+	cursor: pointer;
+	font-size:16px;
+	padding: 16px 32px;
+}
+
+.viewmore:hover{
+	background-color:black;
+	color:white;
+}
