--- a/style.css
+++ b/style.css
@@ -23,11 +23,12 @@ b{
 
 
 #banner{
+	height: calc(100vh - 48px);
 	display: flex;
 	flex-direction: column;
 	align-items: center;
 	justify-content: center;
-	
+	text-align: center;
 
 }
 
@@ -47,4 +48,19 @@ b{
 
 .topnav a.active{
 	background-color: orange;
+}
+
+
+#searchbutton{
+	background-color:orange;
+	color:black;
+	padding: 10px 20px;
+	text-align: center;
+	display: inline-block;
+	border-radius: 10px;
+	text-decoration: none;
+}
+
+#searchbutton:hover, #searchbutton:active{
+	background-color: #f12711;
 }
